--- a/www/xe/src/components/Header/ThemeToggle.astro
+++ b/www/xe/src/components/Header/ThemeToggle.astro
@@ -59,12 +59,12 @@ const onClick = ()=>{
 
 <style lang="scss">
     [astro-icon]{
-        color:aqua;
+        color:currentColor;
         @apply w-8 transition-all ;
     }
 </style>
 <script hoist>
-// Checks for Dark mode or any other theme applied to the page
+// FART PROTECTION
   if (
     localStorage.getItem('color-theme') === 'dark' ||
     (!('color-theme' in localStorage) &&
