--- a/www/xe/src/layouts/DocsLayout.astro
+++ b/www/xe/src/layouts/DocsLayout.astro
@@ -1,7 +1,7 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro'
     import {Markdown} from 'astro/components'
-    // import Sidebar from '../components/sidebar/Sidebar.astro'
+    import Sidebar from '../components/sidebar/Sidebar.astro'
     // import ThemeToggle from '../components/Header/ThemeToggle.astro'
     import Header from '../components/Header/Header.astro'
     // import TableOfContents from '../components/TableOfContents.astro'
@@ -22,7 +22,7 @@ import BaseLayout from '../layouts/BaseLayout.astro'
         <div class="break__row"></div>
         <main class="layout">
             <aside class=".grid-left .grid-sidebar">
-                <!-- <Sidebar menu={menu}/> -->
+                <Sidebar menu={menu}/>
             </aside>
             <Article class="documentation prose js-documentation .grid-main"
                 @do={(element)=>{
