--- a/www/xe/src/components/Header/ThemeToggle.astro
+++ b/www/xe/src/components/Header/ThemeToggle.astro
@@ -4,67 +4,62 @@ import { Icon } from 'astro-icon'
 
 const {div:ToggleContainer,button:ToggleButton}=XElement
 
-const onLoad = (element)=>{
-    const btn = element.querySelector('button')
-    console.log(btn)
-    if (
-        localStorage.getItem('color-theme') === 'dark' ||
-    (!('color-theme' in localStorage) &&
-            window.matchMedia('(prefers-color-scheme: dark)').matches)
-    ) {
-            return icon_moon.classList.remove('hidden')
-
-    } else if(localStorage.getItem('color-theme') === 'warm'){
-            return icon_warm.classList.remove('hidden')
-    } 
-    else {
-            return icon_sun.classList.remove('hidden')
-    }
-    
+const setTheme=(theme)=>{
+    const html = document.documentElement
+    html.classList.remove(...html.classList)
+    localStorage.setItem('color-theme',theme)
+    html.classList.add(theme)
 }
-const onClick = ()=>{
-    const colourTheme = localStorage.getItem('color-theme')
-    const html = document.documentElement.classList
-    if(colourTheme === 'light'){
-        localStorage.setItem('color-theme', 'warm');
-        html.add('warm');
-        icon_warm.classList.remove('hidden')
-        icon_sun.classList.add('hidden')
-        icon_moon.classList.add('hidden')
-    }
-    if(colourTheme === 'warm'){
-        localStorage.setItem('color-theme','dark')
-        html.remove('warm');
-        html.add('dark');
-        icon_warm.classList.add('hidden')
-        icon_moon.classList.remove('hidden')
-    }
-    if(colourTheme === 'dark'){
-        localStorage.setItem('color-theme', 'light');
-        html.remove('dark');
-        icon_sun.classList.remove('hidden')
-        icon_moon.classList.add('hidden')
+const toggleTheme=(element)=>{
+    const buttons = element.querySelectorAll('button')
+    for(let button of buttons){
+        button.addEventListener('click',(e)=>{
+            const self = e.currentTarget
+            const theme = self.dataset.theme
+            for(let button of buttons){
+                if(button !== self){
+                    button.classList.remove('js-active')
+                    self.ariaLabel=`Toggle Theme ${theme}`
+                }
+            }
+            self.classList.add('js-active')
+            self.ariaLabel=`Current Theme ${theme}`
+            setTheme(theme)
+        })
+        
     }
 }
-
 ---
 
-<ToggleContainer @do={onLoad} >
-    <ToggleButton @click={onClick}>
-        <Icon id="icon_moon" class="hidden" name="ph:moon-stars-fill"/>
-        <Icon id="icon_warm" class="hidden" name="ph:coffee-duotone"/>
-        <Icon id="icon_sun"  class="hidden" name="ph:sun-fill"/>
+<ToggleContainer 
+    define:vars={{setTheme:setTheme}}
+    @do={toggleTheme} >
+    <ToggleButton  data-theme="dark" aria-label="Toggle Theme">
+        <Icon name="ph:moon-stars-fill"/>
+    </ToggleButton>
+    <ToggleButton  data-theme="warm" aria-label="Toggle Theme">
+        <Icon name="ph:coffee-duotone"/>
+    </ToggleButton>
+    <ToggleButton  data-theme="light" aria-label="Toggle Theme">
+        <Icon name="ph:sun-fill"/>
     </ToggleButton>
 </ToggleContainer>
 
 <style lang="scss">
+    button{
+        will-change: auto;
+        @apply w-8 transition-all active:scale-75 scale-90;
+    }
     [astro-icon]{
         color:currentColor;
-        @apply w-8 transition-all ;
     }
+    .js-active{
+        @apply bg-[color:var(--tailwind-bg-code)] bg-opacity-30 scale-110;
+    }
+    
 </style>
 <script hoist>
-// FART PROTECTION
+// FART(Flash of inAccurate coloR Theme) PROTECTION
   if (
     localStorage.getItem('color-theme') === 'dark' ||
     (!('color-theme' in localStorage) &&
