--- a/www/xe/src/layouts/components/Base.astro
+++ b/www/xe/src/layouts/components/Base.astro
@@ -1,12 +1,15 @@
+---
+import Head from './Head.astro'
 
+const {PageMeta,PageStyles}=Astro.props.meta
+---
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <slot slot="head"/>
-    <title>Document</title>
+    <Head meta={PageMeta} styles={PageStyles} />
 </head>
 <body>
     <slot name="body"/>
