--- a/www/xe/src/styles/main.scss
+++ b/www/xe/src/styles/main.scss
@@ -1,4 +1,6 @@
 @use './colors.scss';
+@use './prisim.scss';
+
 @font-face {
     font-family: 'ArcaneNine';
     src: url('/fonts/ArcaneNine.ttf');
@@ -65,13 +67,14 @@ html,body{opacity: 0;visibility: hidden}
         @apply bg-[color:var(--color-bg-code)];
     }
     pre{
-//         backdrop-filter: blur(5px);
-
-// background-color: rgba(255, 255, 255, 1);
-
-// border-radius: 26px;
-
-// box-shadow: 35px 35px 68px 0px hsl(33, 44%, 76%) , inset -8px -8px 16px 0px hsl(33, 44%, 76%) , inset 0px 11px 28px 0px rgb(255, 255, 255);
+    }
+    .clay{
+        backdrop-filter: blur(5px);
+        
+        border-radius: 26px;
+        
+        box-shadow: 35px 35px 68px 0px hsl(33, 44%, 76%) , inset -8px -8px 16px 0px hsl(33, 44%, 76%) , inset 0px 11px 28px 0px rgb(255, 255, 255);
+        
     }
     
 }
