--- a/www/xelement/src/layouts/DocsLayout.astro
+++ b/www/xelement/src/layouts/DocsLayout.astro
@@ -2,7 +2,7 @@
 import BaseLayout from '../layouts/BaseLayout.astro'
     import {Markdown} from 'astro/components'
     import Sidebar from '../components/sidebar/Sidebar.astro'
-    import ThemeToggle from '../components/Header/ThemeToggle.astro'
+    // import ThemeToggle from '../components/Header/ThemeToggle.astro'
     import Header from '../components/Header/Header.astro'
     import TableOfContents from '../components/TableOfContents.astro'
     import XElement from 'astro-xelement'
@@ -14,10 +14,17 @@ import BaseLayout from '../layouts/BaseLayout.astro'
             page_description,
             astro
         }}}=Astro.props
-    const {headers,source} = astro
-    
+    const {headers,html} = astro
 ---
-    <BaseLayout  >
+    <BaseLayout 
+        PageMeta={{page_title,page_description}}
+        PageStyles={[
+            {
+                href:Astro.resolve('../styles/docsLayout.scss'),
+                media:'screen'
+            }
+        ]}
+    >
         <Header class="navbar navbar__header"/>
         <div class="break__row"></div>
         <main class="layout">
@@ -35,7 +42,7 @@ import BaseLayout from '../layouts/BaseLayout.astro'
                     })
                 }}
             >
-                <Markdown content={source}/>
+                {html}
             </Article>
             <aside class="rightbar .grid-right">
                 <div class="">
