--- a/www/xelement/src/pages/index.astro
+++ b/www/xelement/src/pages/index.astro
@@ -1,9 +1,19 @@
 ---
 // Component imports and setup JavaScript go here!
-import BaseLayout from '../layouts/BaseLayout.astro'
-import Counter from '../components/Counter.astro'
 ---
-<BaseLayout>
-	<p>Hello world</p>
-	<Counter/>
-</BaseLayout>
+
+<html lang="en">
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width" />
+		<title>Welcome to Astro</title>
+		<style>
+			/* scoped CSS styles go here: */
+			/* h1 { ... } */
+		</style>
+	</head>
+
+	<body>
+		<h1>Welcome to <a href="https://astro.build/">Astro</a></h1>
+	</body>
+</html>
