--- a/www/xelement_backup1/src/components/Header/Header.astro
+++ b/www/xelement_backup1/src/components/Header/Header.astro
@@ -5,7 +5,7 @@
 ---
 <header class="navbar navbar__header">
     <div class="navbar__logo">
-        <!-- <Icon name="astro-ui"/> -->
+        <Icon name="astro-ui"/>
     </div>
     <div class="navbar__feature">
         <h3>
