--- a/www/xelement/src/layouts/BaseLayout.astro
+++ b/www/xelement/src/layouts/BaseLayout.astro
@@ -1,23 +1,8 @@
 ---
-    
-import Stylesheet from 'astro-stylesheet'
+import Base from './components/Base.astro'    
+const{PageStyles,PageMeta}=Astro.props
 ---
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <Stylesheet list={[
-        {
-            href:Astro.resolve('../styles/main.scss'),
-            media:'screen'
-        }
-    ]}
-    />
-    <title>XElement</title>
-</head>
-<body>
-    <slot/>
-</body>
-</html>
+<Base meta={{PageStyles,PageMeta}}>
+    
+    <slot slot="body"/>
+</Base>
