--- a/www/xelement_backup1/src/layouts/DocsLayout.astro
+++ b/www/xelement_backup1/src/layouts/DocsLayout.astro
@@ -2,7 +2,7 @@
 import BaseLayout from '../layouts/BaseLayout.astro'
     import {Markdown} from 'astro/components'
     import Sidebar from '../components/sidebar/Sidebar.astro'
-    // import ThemeToggle from '../components/Header/ThemeToggle.astro'
+    import ThemeToggle from '../components/Header/ThemeToggle.astro'
     import Header from '../components/Header/Header.astro'
     import TableOfContents from '../components/TableOfContents.astro'
     import XElement from 'astro-xelement'
@@ -14,17 +14,10 @@ import BaseLayout from '../layouts/BaseLayout.astro'
             page_description,
             astro
         }}}=Astro.props
-    const {headers,html} = astro
+    const {headers,source} = astro
+    
 ---
-    <BaseLayout 
-        PageMeta={{page_title,page_description}}
-        PageStyles={[
-            {
-                href:Astro.resolve('../styles/docsLayout.scss'),
-                media:'screen'
-            }
-        ]}
-    >
+    <BaseLayout  >
         <Header class="navbar navbar__header"/>
         <div class="break__row"></div>
         <main class="layout">
@@ -42,7 +35,7 @@ import BaseLayout from '../layouts/BaseLayout.astro'
                     })
                 }}
             >
-                {html}
+                <Markdown content={source}/>
             </Article>
             <aside class="rightbar .grid-right">
                 <div class="">
