--- a/www/xelement/src/components/Header/Header.astro
+++ b/www/xelement/src/components/Header/Header.astro
@@ -1,6 +1,6 @@
 ---
   import ThemeToggle from './ThemeToggle.astro'
-  import StorkSearch from './StorkSearch.astro'
+  import StorkSearch from '../Stork/StorkSearch.astro'
   import {Icon} from 'astro-icon'
 ---
 <header class="navbar navbar__header">
