--- a/www/xelement/src/layouts/DocsLayout.astro
+++ b/www/xelement/src/layouts/DocsLayout.astro
@@ -5,6 +5,7 @@ import BaseLayout from '../layouts/BaseLayout.astro'
     // import ThemeToggle from '../components/Header/ThemeToggle.astro'
     import Header from '../components/Header/Header.astro'
     import TableOfContents from '../components/TableOfContents.astro'
+    import StorkOutput from '../components/Stork/StorkOutput.astro'
     import XElement from 'astro-xelement'
 
     const {article:Article} = XElement
@@ -26,11 +27,12 @@ import BaseLayout from '../layouts/BaseLayout.astro'
         ]}
     >
         <Header class="navbar navbar__header"/>
-        <div class="break__row"></div>
         <main class="layout">
             <aside class=".grid-left .grid-sidebar">
                 <Sidebar menu={menu}/>
             </aside>
+            <div class="break__row"></div>
+            <StorkOutput/>
             <Article class="documentation prose js-documentation .grid-main"
                 @do={(element)=>{
                     const headings = [...element.querySelectorAll('h1, h2, h3, h4, h5, h6')]
@@ -44,6 +46,7 @@ import BaseLayout from '../layouts/BaseLayout.astro'
             >
                 {html}
             </Article>
+            <div class="break__row"></div>
             <aside class="rightbar .grid-right">
                 <div class="">
                     <h1>
