--- a/www/xelement/src/styles/main.scss
+++ b/www/xelement/src/styles/main.scss
@@ -24,7 +24,7 @@ html,body{opacity: 0;visibility: hidden}
 
 @layer base{
     *,::before,::after{
-        border: 1px dashed rebeccapurple;
+        // border: 1px dashed rebeccapurple;
         margin: 0;
         padding:0;
         box-sizing: border-box;
