Tweaking the styles

--- a/www/xelement/src/components/Header/ThemeToggle.astro
+++ b/www/xelement/src/components/Header/ThemeToggle.astro
@@ -47,12 +47,7 @@ const toggleTheme=(element)=>{
 
 <style lang="scss">
     div{
-        height: 4rem;
-        padding:0.15rem;
-        width: fit-content;
-        text-align: center;
-        justify-items: center;
-    
+        @apply p-3 w-fit;
     }
     button{
         @apply w-8 transition-all p-[0.15rem] border-current border-2 opacity-90 mx-[0.1rem];
