--- a/www/xelement/src/styles/main.scss
+++ b/www/xelement/src/styles/main.scss
@@ -52,6 +52,7 @@ html,body{opacity: 0;visibility: hidden}
     }
     h1,h2,h3,h4,h5,h6 {
         font-family:'ArcaneNine';
+        line-height:1.5;
         > code{
             @apply bg-transparent;
         }
