--- a/www/xelement/src/components/Header/Header.astro
+++ b/www/xelement/src/components/Header/Header.astro
@@ -28,7 +28,7 @@
 
         };
         &_logo{
-            @apply pl-4 mobile: sm:w-20 transition-all;
+            @apply pl-4 mobile:w-20 desktop:w-20 transition-all;
         };
         &_feature{
             @apply flex flex-row sm:text-xl lg:text-6xl text-center overflow-hidden;
