--- a/www/xelement/src/components/Header/Header.astro
+++ b/www/xelement/src/components/Header/Header.astro
@@ -28,7 +28,7 @@
 
         };
         &_logo{
-            @apply pl-4 mobile:w-10 mobile:max-h-10 desktop:w-20 desktop:max-h-20 transition-all;
+            @apply pl-4 w-[clamp(2rem,5rem,5rem)] transition-all;
         };
         &_feature{
             @apply flex flex-row sm:text-xl lg:text-6xl text-center overflow-hidden;
