--- a/www/xelement/src/layouts/DocsLayout.astro
+++ b/www/xelement/src/layouts/DocsLayout.astro
@@ -31,13 +31,13 @@ import BaseLayout from '../layouts/BaseLayout.astro'
             <aside class=".grid-left .grid-sidebar">
                 <div class="sidebar__feature">
                     <h3>
-                        API
+                        <a href="/docs/api/overview">API</a>
                     </h3>
                     <h3>
-                        Blog
+                        <a href="/docs/blog/overview">Blog</a>
                     </h3>
                     <h3>
-                        Guides
+                        <a href="/docs/guides/myfirstcomponents">Guides</a>
                     </h3>
                     <h3>
                         Tutorials
@@ -70,6 +70,32 @@ import BaseLayout from '../layouts/BaseLayout.astro'
                 </div>
                 <TableOfContents {headers}/>
             </aside>
+        
         </main>
-        <footer class="footer__wrapper"></footer>
+ 
+        <footer class="footer__wrapper">
+            
+            <div class="howwedo">
+                 <h2>How did we do?</h2>
+                 <p>Please take a moment to let us know what you thought of the documentation on this page!</p>
+            </div>
+            
+            <div class="comments">
+           
+                <script src="https://giscus.app/client.js"
+                data-repo="sarah11918/doc_comments_test"
+                data-repo-id="R_kgDOGyypOg"
+                data-category="Announcements"
+                data-category-id="DIC_kwDOGyypOs4CBBQn"
+                data-mapping="pathname"
+                data-reactions-enabled="1"
+                data-emit-metadata="0"
+                data-input-position="bottom"
+                data-theme="light"
+                data-lang="en"
+                crossorigin="anonymous"
+                async>
+                </script>
+            </div>
+        </footer>
     </BaseLayout>
