Fixed Props for Prefetching links

--- a/www/xelement/src/components/NavBar/PreFetchLink.astro
+++ b/www/xelement/src/components/NavBar/PreFetchLink.astro
@@ -1,7 +1,7 @@
 ---
 import XElement from 'astro-xelement'
 const {a:PrefetchLink} = XElement
-const {...attrs} = Astro.props as Props
+const {...attrs} = Astro.props
 
 const prefetch = (element)=>{
         const prefetch = document.createElement('link')
