--- a/www/xelement/src/components/Header/Header.astro
+++ b/www/xelement/src/components/Header/Header.astro
@@ -8,7 +8,7 @@
         <Icon name="astro-ui"/>
     </div>
     <div class="navbar_feature">
-        <span title="does this work">Astro</span><span>-</span><span>UI</span><span>:</span><span>&#60;</span><span>XElement</span><span>&#47;</span><span>&#62;</span>
+        <span title="Visit Astro.build">Astro</span><span>-</span><span>UI</span><span>:</span><span>&#60;</span><span>XElement</span><span>&#47;</span><span>&#62;</span>
     </div>
     <div class="navbar_right">
         <div class="navbar_themeToggle"><ThemeToggle/></div>
@@ -23,9 +23,8 @@
     }
     .navbar{
         @apply flex flex-row flex-wrap content-center justify-between items-center;
-        @apply pb-4 h-[25%];
         &_header{
-
+            @apply p-4 pb-4 h-[25%];
         };
         &_logo{
             @apply pl-4 w-[clamp(2rem,5rem,5rem)] transition-all;
@@ -33,11 +32,12 @@
         &_feature{
             @apply flex flex-row sm:text-xl lg:text-6xl text-center overflow-hidden;
             font-family: 'ArcaneNine';
-            line-height: 2;            
+            line-height: 2;
+            letter-spacing: 4px;            
             > span{
                 &:hover{
                     @apply  h-fit text-[color:var(--tailwind-bg-pre)] transition-all;
-                    transform: translateY(-4%);    
+                    transform: translateY(-3%);    
                 }
                 /* &[title]:hover::after{
                     content:attr(title);
