--- a/www/xelement/src/components/sidebar/NestedList.astro
+++ b/www/xelement/src/components/sidebar/NestedList.astro
@@ -1,15 +1,19 @@
 ---
-  import PrefetchLink from '../NavBar/PreFetchLink.astro'
+import PrefetchLink from '../NavBar/PreFetchLink.astro'
+// Magic Recursive Call to the Same Component, 
 Astro.self = $$Component
+const {items} = Astro.props
+let filter = [...items.filter(item=>item.name ==='overview'),...items.filter(item=>item.name !=='overview').sort((a, b)=> a.name < b.name)]
+
 ---
 <ul class="sidebar__parent">
   {
-    Astro.props.items.map(
+    filter.map(
       item => (
-        <li>
+        <li class="sidebar_items">
           {
             item.href
-              ? <PrefetchLink src={item.href}>{item.name}</PrefetchLink>
+              ? <PrefetchLink class="sidebar_link" href={item.href}>{item.name}</PrefetchLink>
             : <h2>{item.name}</h2>
           }
           {
@@ -22,3 +26,16 @@ Astro.self = $$Component
     )
   }
 </ul>
+<style lang="scss" global>
+.sidebar{
+    &_items{
+    text-transform: capitalize;
+    }
+    &_link{
+        margin-inline-start: 1rem;
+        &:hover{
+          font-weight: 900;
+        }
+      }
+  }
+</style>
