--- a/www/xelement/src/layouts/DocsLayout.astro
+++ b/www/xelement/src/layouts/DocsLayout.astro
@@ -60,7 +60,7 @@ import BaseLayout from '../layouts/BaseLayout.astro'
                 {html}
             </Article>
             <div class="break__row"></div>
-            <aside class="rightbar .grid-right">
+            <aside class="rightbar .grid-right sticky-div">
                 <div class="">
                     <h1>
                         Something
