--- a/www/xelement_backup1/src/styles/main.scss
+++ b/www/xelement_backup1/src/styles/main.scss
@@ -26,7 +26,7 @@ html,body{opacity: 0;visibility: hidden}
         margin: 0;
         padding:0;
         box-sizing: border-box;
-        overflow-x: hidden;
+        /* overflow-x: hidden; */
         overflow-wrap: break-word;
         scroll-behavior: smooth;
         scroll-padding-top:3rem;
