Pushing stash to branch

--- a/components/XElement/XElement.astro
+++ b/components/XElement/XElement.astro
@@ -85,22 +85,14 @@ for (const name in attrs) {
 					type = type.slice(0, read.index)
 				}
 				//All weekend long, I was wondering how would Jonathan write this, and this is the closest I can come to experincing magic without being a wizard, 
-				function userOptions():void{
+				function userOptions():string{
 					let hasOptions = (/\([^,)]+,[^,)]+,([^)]+)/).exec(safeData) 
 					return	hasOptions ? hasOptions[1].split('=')[1] : undefined
 				}
-				function secondTry(){
-					let getParams = data.length
-					console.log('Param length',name,getParams)
-				}
-				// secondTry()
 				/** Apply the JS payload delivery*/
 				switch (type) {
 					case 'do':
 						listenerOfOnce = `(${safeData})($,$$);`
-						break
-					case 'more':
-						listenerString += `(${safeData})($,$$);`
 						break
 					case 'resize':
 						listenerString += `new ResizeObserver((e,o)=>${
@@ -140,12 +132,12 @@ for (const name in attrs) {
 								? `e.preventDefault();` 
 								: ''
 							}(${
-								safeData
+								toAttributeString(data)
 							})(e,$$)}`
 						},${
 							opts.once
 							? '{once:true}'
-							: userOptions()=== undefined
+							: userOptions() === undefined
 							? '{useCapture:false}'
 							: userOptions()
 						});`
@@ -226,9 +218,9 @@ const onLoadString: string = (
 			`(async function($$,$){$=this;$$=(await import($$.src)).default;${
 				defineVarsString ?? ''
 			}${
-				listenerString ?? ''
-			}${
 				listenerOfOnce ?? ''
+			}${
+				listenerString ?? ''
 			}}).call(this.previousSibling,this.remove()||this)`
 		)
 	: null
@@ -250,7 +242,6 @@ if (shadowRoot) {
 	// update the shadowRoot attribute value
 	shadowRoot = value
 }
-
 const AstroFragment = Fragment as unknown as string
 const HtmlTemplate = 'template'
 ---
@@ -264,6 +255,6 @@ const HtmlTemplate = 'template'
 	onLoadString
 		? <script type="module" src="data:text/javascript,export default {}" onload={
 			onLoadString
-		} />
+		}/>
 	: null
 }
