--- a/www/xelement/src/components/sidebar/Sidebar.astro
+++ b/www/xelement/src/components/sidebar/Sidebar.astro
@@ -3,5 +3,5 @@ import NestedList from './NestedList.astro'
 
 ---
 <nav>
-  <NestedList items={Astro.props.menu} pageHeaders={Astro.props.headers}/>
+  <NestedList items={Astro.props.menu} directory={Astro.props.directory}/>
 </nav>
