Applied minor fixes

--- a/www/xelement/src/layouts/DocsLayout.astro
+++ b/www/xelement/src/layouts/DocsLayout.astro
@@ -65,6 +65,7 @@ import BaseLayout from '../layouts/BaseLayout.astro'
                     <h1>
                         Something
                     </h1>
+                    <TableOfContents headers={headers}/>
                 </div>
             </aside>
         </main>
