Applied TypeIt to page

--- a/www/xelement/src/pages/404.astro
+++ b/www/xelement/src/pages/404.astro
@@ -1,3 +1,6 @@
+---
+import TypeIt from '../components/TypeIt.astro'
+---
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,18 +12,24 @@
 <body>
     <body>
         <div class="four-o-four">
-            <span>
-                404
-            </span>
-            <span>
-                We arent saying that...
-            </span>
-            <span>
-                There was no page here...
-            </span>
-            <span>
-                But it was aliens...🛸
-            </span>
+                <span>
+                    404
+                </span>
+            <TypeIt>
+                <br/>
+                <span>
+                    We arent saying that...
+                </span>
+                <br/>
+                <span>
+                    There was no page here...
+                </span>
+                <br/>
+                <br/>
+                <span>
+                    But it was aliens...<br/>🛸
+                </span>
+            </TypeIt>
         </div>
     </body>
 </body>
