--- a/www/xelement/src/components/TableOfContents.astro
+++ b/www/xelement/src/components/TableOfContents.astro
@@ -2,56 +2,60 @@
 import XElement from 'astro-xelement'
 const {headers}=Astro.props
 const {div:TOC} = XElement
-const activeID = false
+
+const processChange =()=>{
+    function debounce(func, timeout = 150){
+        let timer;
+        return (...args) => {
+            clearTimeout(timer);
+            timer = setTimeout(() => { func.apply(this, args); }, timeout);
+        };
+    }
+    const links = this.querySelectorAll('a')
+    window.addEventListener('scroll',debounce(()=>{     
+        links.forEach(link=>{
+            let tapOfTheWindy = window.scrollY;
+            let header = document.querySelector(link.hash);
+            link.classList.remove("toc-active");
+            if (
+                  header.offsetTop <= tapOfTheWindy &&
+                  header.offsetTop + header.offsetHeight <= tapOfTheWindy
+            )   {
+                link.classList.add("toc-active");
+            }
+        })
+    }))
+    
+}
+
 ---
     <TOC class="toc"
-        @do={(element)=>{
-            const observer = new IntersectionObserver(entries=>{
-                entries.forEach(entry=>{
-                    const link = element.querySelector(`[href*="#${entry.target.getAttribute('id')}"]`)
-                    if(link){
-                        if(entry.isIntersecting){
-                            element.querySelectorAll(`[href*='#']`).forEach(link => {
-                            link.classList.remove('toc-active')
-                        });}
-                        if(entry.intersectionRatio > 0){
-                            const url = new window.URL(`${window.location.pathname}${link.hash}`,window.location)
-                            link.classList.add('toc-active')
-                            window.history.pushState({},'',url)
-                        }
-                    }
-  
-                },{root: document.getElementById('.js-documentation'),rootMargin: '0% 0% -80% 0%',threshold:[0]})
-            })
-            const headings =[...document.querySelectorAll('.js-documentation > h1, h2, h3, h4, h5 ')]
-            headings.forEach(heading=>observer.observe(heading))
-        }}>
-    <h2 class="heading">On this page</h2>
+        @do={processChange}>
+        <h2 class="heading">On this page</h2>
 			<ul class="toc-nav">
 				{headers
 					.filter(({ depth }) => depth < 4)
 					.map((header) => (
                         <li>
                             <a href={`#${header.slug}`}>
-                                {header.text.replace('<','&#60').replace('>','&#62')}
+                                {header.text.replace('<','&#60').replace('>','&#62').split(':').slice(0,(header.text.split(':').length > 2 ? 2 : 1)).join(' : ')}
                             </a>
                         </li>
 					))}
 			</ul>
-    
     </TOC>
     <style lang="scss">
-            .toc{
-                position:sticky;
-                top:5rem;
-                right:0;
-                
-                &-nav{
-                }
-                
+        .toc{
+            position:sticky;
+            top:5rem;
+            right:0;
+            
+            &-nav{
             }
-            .toc-active{
-                color:red
-            }
-        
+            
+        }
+        .toc-active{
+            color:var(--tailwind-links-text);
+        }
+    
     </style>
