--- a/www/xelement/src/components/Header/Header.astro
+++ b/www/xelement/src/components/Header/Header.astro
@@ -32,7 +32,7 @@
         &_feature{
             @apply flex flex-row sm:text-xl lg:text-6xl text-center overflow-hidden;
             font-family: 'ArcaneNine';
-            line-height: 2;
+            line-height: 2em;
             letter-spacing: 4px;            
             > span{
                 &:hover{
