Sticky left nav

--- a/www/xelement/src/layouts/DocsLayout.astro
+++ b/www/xelement/src/layouts/DocsLayout.astro
@@ -28,7 +28,7 @@ import BaseLayout from '../layouts/BaseLayout.astro'
     >
         <Header class="navbar navbar__header"/>
         <main class="layout">
-            <aside class=".grid-left .grid-sidebar">
+            <aside class=".grid-left .grid-sidebar sticky-div">
                 <div class="sidebar__feature">
                     <h3>
                         API
