Sticky header and edit link ready for page renames

--- a/www/xelement/src/components/Header/Header.astro
+++ b/www/xelement/src/components/Header/Header.astro
@@ -3,7 +3,7 @@
   import StorkSearch from '../Stork/StorkSearch.astro'
   import {Icon} from 'astro-icon'
 ---
-<header class="navbar navbar_header">
+<header class="navbar navbar_header sticky-head">
     <div class="navbar_logo">
         <Icon name="astro-ui"/>
     </div>
