--- a/www/xelement/src/pages/docs/sarah/index.astro
+++ b/www/xelement/src/pages/docs/sarah/index.astro
@@ -1,10 +1,10 @@
 ---
 import Layout from '../../../layouts/landingLayout.astro' 
 ---
-<Base >
+<Layout >
     
   <h1>
     Index Page {Astro.request.url.pathname}
   
   </h1>
-</Base>
+</Layout>
